--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'jacoco'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
-version = '2.1.10'
+version = '2.1.10-SNAP'
 
 repositories {
     mavenCentral()
@@ -24,7 +24,7 @@ dependencies {
     compile gradleApi()
     compile localGroovy()
 
-    compile 'com.wix:wix-embedded-mysql:4.2.0'
+    compile 'com.wix:wix-embedded-mysql:4.6.1'
     compile 'org.apache.commons:commons-lang3:3.8.1'
 
     testCompile 'junit:junit:4.12'
